--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "1.8.4",
     "dayjs": "1.11.13",
     "element-plus": "2.9.7",
+    "file-saver": "2.0.5",
+    "html-docx-js-typescript": "0.1.5",
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
     "mitt": "3.0.1",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "4.12.0",
+    "@types/file-saver": "2.0.7",
     "@types/js-cookie": "3.0.6",
     "@types/lodash-es": "4.17.12",
     "@types/node": "22.14.1",
