--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@element-plus/icons-vue": "2.3.1",
     "axios": "1.8.4",
     "dayjs": "1.11.13",
+    "docx-preview": "0.3.5",
+    "docxtemplater": "3.63.2",
     "element-plus": "2.9.7",
+    "file-saver": "2.0.5",
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
     "mitt": "3.0.1",
@@ -27,6 +30,7 @@
     "path-browserify": "1.0.1",
     "path-to-regexp": "8.2.0",
     "pinia": "3.0.2",
+    "pizzip": "3.2.0",
     "screenfull": "6.0.2",
     "vue": "3.5.13",
     "vue-router": "4.5.0",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "4.12.0",
+    "@types/file-saver": "2.0.7",
     "@types/js-cookie": "3.0.6",
     "@types/lodash-es": "4.17.12",
     "@types/node": "22.14.1",
